--- a/src/home/index.hbs
+++ b/src/home/index.hbs
@@ -5,6 +5,12 @@
         <a rel="external" target='_blank' href='https://handlebarsjs.com/'>
             <img class='website-logo' src="/home/res/logo.png">
         </a>
+
+    <!-- Bootstrap button example -->
+    <button class="btn btn-primary">My Bootstrap button</button>
+    
+    <!-- Find classes for other elements on https://getbootstrap.com/docs -->
+
     </div>
 </main>
 {{>footer/index}}
