--- a/src/home/index.css
+++ b/src/home/index.css
@@ -24,6 +24,7 @@ body
 {
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
