--- a/src/layouts/main.hbs
+++ b/src/layouts/main.hbs
@@ -17,6 +17,8 @@
             }
         </style>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Get bootstrap to this document -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
         {{{body}}}
