--- a/src/home/index.css
+++ b/src/home/index.css
@@ -1,6 +1,8 @@
 /* SCSS */
 
 /* Stylesheet Imports */
+@import url('/partials/header/index.css');
+@import url('/partials/footer/index.css');
 
 /* Styles */
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap');
