Recentralized footer text

--- a/src/partials/footer/index.css
+++ b/src/partials/footer/index.css
@@ -12,6 +12,11 @@
     color: var(--color-secondary);
 }
 
+.footer-text
+{
+    margin: 0;
+}
+
 .footer-text a
 {
     color: var(--color-secondary);
